--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://bboom.netilify.com/'
 languageCode = 'en-us'
 title = 'David Site'
 theme = "yinyang"
