--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = 'en-us'
 title = 'David Site'
 theme = "yinyang"
 DefaultContentLanguage = "cn"
-
+enableInlineShortcodes = true
 [markup]
   [markup.goldmark]
     [markup.goldmark.renderer]
